<resources>
    <string name="app_name">Relevium</string>
    <string name="button1_log_in">Log in</string>
    <string name="button2_register">Register</string>
    <string name="image_desc">Application logo</string>
    <string name="password_hint">Enter your password</string>
    <string name="email_hint">Enter your email</string>
    <string name="register_activity">Register</string>
    <string name="login_activity">Login</string>
    <string name="firstname">Enter your first name</string>
    <string name="lastname">Enter your last name</string>
    <string name="username">Enter your username</string>
    <string name="email">Enter your email</string>
    <string name="password">Enter your password</string>
    <string name="re_password">Re-Enter your password</string>
    <string name="agent_category">Agent</string>
    <string name="profile_category">Profile</string>
    <string name="chat_category">Chat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mohamed ELTorky</string>
    <string name="nav_header_subtitle">ELTorky@relevium.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="access_token" translatable="false">pk.eyJ1IjoibW9oYW1lZDY2NjMiLCJhIjoiY2p1NGJ4OGoxMHRmazQ0bzE5Mng0NXpseSJ9.HVTu0BfhvTTSv4woLCorJA</string>
    <string name="title_activity_maps">Map</string>
    <string name="default_notification_channel_id">Disaster alert</string>
    <string name="default_notification_tittle">New Alert nearby !</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="request_location_updates">Request location updates</string>
    <string name="remove_location_updates">Remove location updates</string>
    <string name="location_updated">Location Updated: %1$s</string>
    <string name="location_unknown">Location unknown</string>
    <string name="location_updates_label">Location Updates</string>
    <string name="launch_activity">Launch activity</string>

    <string name="blood_prompt">Choose a blood type</string>
    <string-array name="blood_array">
        <item>Not-Specified</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>Oh</item>
    </string-array>
</resources>
