<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="center_horizontal"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_marginTop="83dp"
        android:src="@drawable/relevium"
        android:layout_marginBottom="23dp"
        android:contentDescription="@string/image_desc"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:maxLength="30"
        android:inputType="textEmailAddress"
        android:id="@+id/username"
        android:hint="@string/email_hint"
        android:background="@drawable/rounded_corners_edit_text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/password"
        android:maxLength="20"
        android:hint="@string/password_hint"
        android:gravity="center"
        android:background="@drawable/rounded_corners_edit_text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login"
        android:textStyle="bold"
        android:text="@string/button1_log_in"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/custom_button"
        android:textColor="#FFFFFF"/>



    <Button
        android:layout_width="160.5dp"
        android:layout_height="48.25dp"
        android:text="@string/button2_register"
        android:id="@+id/register"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:textColor="#FFFFFF"
        android:background="@drawable/custom_button"/>

</LinearLayout>