<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:gravity="center"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:id="@+id/firstName_register"
        android:maxLength="15"
        android:hint="@string/firstname"
        android:background="@drawable/rounded_corners_edit_text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:id="@+id/lastName_register"
        android:maxLength="15"
        android:hint="@string/lastname"
        android:background="@drawable/rounded_corners_edit_text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:id="@+id/email_register"
        android:maxLength="30"
        android:hint="@string/email_hint"
        android:background="@drawable/rounded_corners_edit_text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/password_register"
        android:maxLength="20"
        android:hint="@string/password"
        android:background="@drawable/rounded_corners_edit_text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/re_password_register"
        android:maxLength="20"
        android:hint="@string/re_password"
        android:background="@drawable/rounded_corners_edit_text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"/>

    <Button
        android:layout_width="160.5dp"
        android:layout_height="48.25dp"
        android:text="@string/button2_register"
        android:id="@+id/submit"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:textColor="#FFFFFF"
        android:background="@drawable/custom_button"/>

</LinearLayout>